k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ome
  labels:
    app: order-matching-engine
