k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ome-service
  namespace: ome
spec:
  selector:
    app: ome-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
