k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ome-ingress
  namespace: ome
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ome.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ome-service
                port:
                  number: 80
